--- a/imagewatch/src/main/res/layout/activity_rollout_preview.xml
+++ b/imagewatch/src/main/res/layout/activity_rollout_preview.xml
@@ -7,6 +7,7 @@
     tools:context="com.xia.imagewatch.RolloutPreviewActivity">
 
     <com.xia.imagewatch.RolloutViewPager
+        android:fitsSystemWindows="true"
         android:id="@+id/bi_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
