--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -61,7 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp">
-                    <EditText
+                    <com.xia.adgis.Utils.ClearEditText
                         android:id="@+id/register_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -170,7 +170,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp">
 
-                    <EditText
+                    <com.xia.adgis.Utils.ClearEditText
                         android:id="@+id/register_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
