--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,7 +8,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp">
+        android:layout_height="200dp">
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_setting"
             android:layout_width="match_parent"
@@ -24,7 +24,8 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:src="@drawable/main_setting"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/setting_toolbar"
