--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -35,4 +35,12 @@
 
     </declare-styleable>
 
+    <declare-styleable name="MultiWaveHeader">
+        <attr name="mwhWaveHeight" format="dimension"/>
+        <attr name="mwhStartColor" format="color"/>
+        <attr name="mwhCloseColor" format="color"/>
+        <attr name="mwhAlphaColor" format="float"/>
+        <attr name="mwhWaves" format="string"/>
+    </declare-styleable>
+
 </resources>
